fix typeahead alignment with material theme

--- a/static/css/less_css/less/tba/tba_gameday.less
+++ b/static/css/less_css/less/tba/tba_gameday.less
@@ -360,6 +360,11 @@ body {
   }
 }
 
+#add-favorite-team-input {
+  padding-left: 13px;
+  margin-top: 3px;
+}
+
 .overlay {
   background-image: -moz-linear-gradient(top, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.6) 60px, rgba(0,0,0,0) 100px);
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.8)), color-stop(60px,rgba(0,0,0,0.6)), color-stop(100px,rgba(0,0,0,0)));
